--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
         "@type": "Organization",
         "name": "FNC Reformas",
         "url": "https://fnc-reformas.es/",
-        "logo": "https://fnc-reformas.es/android-chrome-512x512.png"
+        "logo": "https://fnc-reformas.es/android-chrome-512x512.png",
+        "sameAs": [
+          "https://www.instagram.com/fnc.reformas",
+          "https://www.tiktok.com/@fnc.reformas"
+        ]
       }
     </script>
     <script type="application/ld+json">
